# teamtype

./: .gitignore  .pre-commit-config.yaml  .rustfmt.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  REUSE.toml  deny.toml  flake.nix
.cargo/: config.toml
.github/: pull_request_template.md  pull_request_template.md.license
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: deploy-nvim-plugin.yml  general.yml  mdbook.yml  nvim-plugin.yml  release.yml  reuse.yml  vscode-plugin.yml
book/: book.toml
book/src/: SUMMARY.md  configuration.md  connection-making.md  editor-plugin-dev-guide.md  file-events.md  file-ownership.md  git-integration-manual.md  git-integration-synchronized.md  ignored-files.md  learn-from-us.md  local-first.md  offline-support.md  pair-programming.md  related-projects.md  relays.md  shared-notes.md  system-overview.md  workarounds.md
crates/e2e-tests/: Cargo.toml  README.md
crates/e2e-tests/src/: actors.rs  socket.rs
crates/e2e-tests/tests/: fuzzer.rs  nvim-plugin.rs
crates/integration-tests/: Cargo.toml  README.md
crates/integration-tests/.cargo/: config.toml
crates/integration-tests/tests/: fuzzer.rs  nvim-plugin.rs
crates/teamtype/: .gitignore  Cargo.toml  build.rs
crates/teamtype/assets/: adjectives.txt  nouns.txt
crates/teamtype/src/: cli.rs  cli_config.rs  cli_ui.rs  client.rs  config.rs  daemon.rs  document.rs  editor.rs  editor_connection.rs  editor_protocol.rs  jsonrpc_forwarder.rs  lib.rs  logging.rs  lua.rs  main.rs  ot.rs  peer.rs  permissions.rs  sandbox.rs  setup.rs  traits.rs  types.rs  watcher.rs  wormhole.rs
daemon/: .gitattributes  .rustfmt.toml  Cargo.toml  README.md  build.rs  deny.toml  flake.nix
daemon/integration-tests/: Cargo.toml
daemon/integration-tests/src/: actors.rs  socket.rs
daemon/integration-tests/tests/: fuzzer.rs  nvim-plugin.rs  plugin-tester.rs
daemon/src/: cli.rs  cli_ask.rs  config.rs  daemon.rs  document.rs  editor.rs  editor_connection.rs  editor_protocol.rs  jsonrpc_forwarder.rs  lib.rs  logging.rs  main.rs  ot.rs  path.rs  peer.rs  sandbox.rs  types.rs  watcher.rs  wormhole.rs
daemon/src/editor/: editor_unix.rs
daemon/src/jsonrpc_forwarder/: jsonrpc_forwarder_unix.rs
daemon/src/peer/: sync.rs
daemon/src/sandbox/: sandbox_unix.rs
docs/: teamtype-cli-ui.md
emacs-plugin/: README.md  teamtype.el
hedgedoc-bridge/: Cargo.toml  README.md
hedgedoc-bridge/src/: main.rs
nvim-plugin/: .stylua.toml  README.md
nvim-plugin/doc/: teamtype.txt
nvim-plugin/lua/: teamtype.lua
nvim-plugin/lua/teamtype/: changetracker.lua  connection.lua  cursor.lua  helpers.lua  logging.lua  lsp_util.lua
nvim-plugin/plugin/: teamtype.lua
rocks/: teamtype-dev-1.rockspec
rocks/spec/: teamtype_spec.lua
tools/: fake-daemon.py
vim-plugin/plugin/: ethersync.lua
vscode-plugin/: eslint.config.mjs  package-lock.json  package.json  package.json.license  prettier.config.js
vscode-plugin/src/: cursor.ts  extension.ts
vscode-plugin/src/test/: extension.test.ts
