# SPDX-FileCopyrightText: 2024 Danny McClanahan <dmcC2@hypnicjerk.ai>
# SPDX-FileCopyrightText: 2024 blinry <mail@blinry.org>
# SPDX-FileCopyrightText: 2024 zormit <nt4u@kpvn.de>
# SPDX-FileCopyrightText: 2026 Caleb Maclennan <caleb@alerque.com>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "e2e-tests"
description = "End-to-end testing of Teamtype including plugin integrations."
publish = false
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[[test]]
name = "fuzzer"
# We set process-global state in this test, so we want to run our own main method.
harness = false
# Don't include fuzzer in default test runs.
test = false

[dependencies]
async-trait.workspace = true
rand = "0.10"
serde_json.workspace = true
teamtype.workspace = true
tempfile.workspace = true

[dependencies.nvim-rs]
version = "0.9"
features = ["use_tokio"]

[dependencies.tokio]
version = "1"
default-features = false
features = ["process"]

[dev-dependencies]
anyhow.workspace = true
futures.workspace = true
pretty_assertions.workspace = true
serial_test = "3"
tracing.workspace = true
teamtype.workspace = true

[lints]
workspace = true
