# SPDX-FileCopyrightText: 2024 Danny McClanahan <dmcC2@hypnicjerk.ai>
# SPDX-FileCopyrightText: 2024 blinry <mail@blinry.org>
# SPDX-FileCopyrightText: 2024 zormit <nt4u@kpvn.de>
# SPDX-FileCopyrightText: 2026 Caleb Maclennan <caleb@alerque.com>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "teamtype"
description = "Enables real-time co-editing of local text files."
version.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"
include = ["*.rs", "*.toml", "src/initial_automerge_doc.bin"]
documentation = "https://teamtype.github.io"
homepage.workspace = true
repository.workspace = true
keywords = [
    "collaboration",
    "local-first",
    "synchronization",
    "crdt",
    "peer-to-peer",
]
categories = ["command-line-utilities", "text-editors"]
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "teamtype"
required-features = ["cli"]

[lib]
name = "teamtype"
crate-type = ["rlib", "cdylib"]

[features]
# This is unfortunate, but users of the crate as a library should use `default-features = false`.
default = ["cli"]
cli = ["dep:clap", "tokio/signal", "tokio/rt-multi-thread"]

[build-dependencies]
anyhow.workspace = true
automerge = "0.8"
clap_complete = "4"
clap_mangen = "0.3"
regex = "1"

[build-dependencies.clap]
version = "4"
features = ["derive", "env"]

[build-dependencies.vergen-git2]
version = "9"
features = ["emit_and_set"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
automerge = "0.8"
constant_time_eq = "0.4"
dissimilar = "1"
futures.workspace = true
ignore = "0.4"
# Iroh is currently held back to the 0.3x series while 0.9x are canary releases:
# https://www.iroh.computer/blog/iroh-0-90-the-canary-series
iroh = "0.35"
# We cannot bump to 0.8 because Iroh 0.35's netwatcher usage causes mismatched types on macOS.
magic-wormhole = "0.7"
microxdg = "0.2"
operational-transform = "0.6"
path-clean = "1"
# We have to match types exposed by Iroh 0.3x.
rand = "0.8"
ropey = "1"
rust-ini = "0.21"
serde_json.workspace = true
tempfile.workspace = true
tracing.workspace = true
url = "2"

[dependencies.clap]
version = "4.5"
features = ["derive", "env"]
optional = true

[dependencies.derive_more]
version = "2"
features = ["as_ref", "deref", "display"]

[dependencies.git2]
version = "0.21"
default-features = false

[dependencies.notify]
version = "8"
default-features = false
features = ["macos_fsevent"]

[dependencies.postcard]
version = "1"
features = ["alloc"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.time]
version = "0.3"
features = ["formatting", "macros"]

[dependencies.tokio]
version = "1"
features = ["rt", "io-std", "io-util", "macros", "net", "time"]

[dependencies.tokio-util]
version = "0.7"
features = ["codec"]

[dependencies.tracing-subscriber]
version = "0.3"
default-features = false
features = ["ansi", "fmt", "time", "env-filter"]

[dev-dependencies]
pretty_assertions.workspace = true
tracing-test = "0.2"

[lints]
workspace = true
