# SPDX-FileCopyrightText: 2024 Danny McClanahan <dmcC2@hypnicjerk.ai>
# SPDX-FileCopyrightText: 2024 blinry <mail@blinry.org>
# SPDX-FileCopyrightText: 2024 zormit <nt4u@kpvn.de>
# SPDX-FileCopyrightText: 2026 Caleb Maclennan <caleb@alerque.com>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "teamtype-integration-tests"
description = "End-to-end testing of Teamtype."
version = "0.0.0"
edition = "2024"
publish = false

[[test]]
name = "fuzzer"
# We set process-global state in this test, so we want to run our own main method.
harness = false

[dependencies]
async-trait = "0.1"
nvim-rs = { version = "0.9", features = ["use_tokio"] }
rand = "0.10"
serde_json = "1"
tempfile = "3"
tokio = { version = "1", default-features = false, features = ["process"] }

[dependencies.teamtype]
path = ".."
default-features = false

[dev-dependencies]
anyhow = "1"
futures = { version = "0.3", default-features = false }
pretty_assertions = "1"
serial_test = "3"
tracing = "0.1"

# This crate needs to define specific optimization settings, so we can't put it in the
# same workspace.
[workspace]
members = ["."]

# The tests in this module time out without optimizations enabled.
[profile.test]
opt-level = 3
